<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:cardElevation="8dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/add_city_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/add_city"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="275dp"
            android:layout_height="62dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_city_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_city_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enter_city_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/provinceInputLayout"
            android:layout_width="275dp"
            android:layout_height="62dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_province_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enter_city_province" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/confirmCity_button"
            android:layout_width="105dp"
            android:layout_height="53dp"
            android:layout_marginStart="175dp"
            android:background="@color/white"
            android:text="@string/ok"
            android:textColor="@color/add_city_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/provinceInputLayout" />

        <Button
            android:id="@+id/cancelCity_button"
            android:layout_width="105dp"
            android:layout_height="53dp"
            android:background="@color/white"
            android:text="@string/cancel"
            android:textColor="@color/add_city_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/confirmCity_button"
            app:layout_constraintTop_toBottomOf="@+id/provinceInputLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>